--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <title>Scoped CSS Variables and JS</title>
+    <title>Play with CSS</title>
     <link rel="icon" href="https://fav.farm/🔥" />
   </head>
   <body>
